Align IntelliJ builds with 2025.3 compatibility